# RSVIM

./: Cargo.toml  README.md  test.txt
src/: main.rs
src/editor/: custom.rs  mod.rs
src/editor_core/: cli_handler.rs  file_handler.rs  mod.rs
