[package]
name = "rsvim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16" , features = ["derive"]}
log = "0.4.0"
env_logger = { version = "0.9.0" }
tui = "0.18"
crossterm = "0.24.0"